--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,12 @@
     "symfony/yaml": "6.2.*"
   },
   "require-dev": {
+    "phpunit/phpunit": "^9.5",
     "roave/security-advisories": "dev-latest",
+    "symfony/browser-kit": "6.2.*",
+    "symfony/css-selector": "6.2.*",
     "symfony/maker-bundle": "*",
+    "symfony/phpunit-bridge": "^6.2",
     "symfony/web-profiler-bundle": "6.2.*"
   },
   "config": {
