--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "symfony/yaml": "6.2.*"
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.4",
     "phpunit/phpunit": "^9.5",
     "roave/security-advisories": "dev-latest",
     "symfony/browser-kit": "6.2.*",
