--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,7 @@ security:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     secured_area:
+      user_checker: App\Security\UserChecker
       form_login:
         enable_csrf: true
         login_path: app_login
