--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,7 @@ services:
   App\EventListener\ExceptionListener:
     tags:
       - { name: kernel.event_listener, event: kernel.exception }
+
+  App\Service\Twig\Environment:
+    decorates: twig
+    parent: twig
